--- a/style/index.css
+++ b/style/index.css
@@ -136,6 +136,15 @@ body {
   text-align: justify;
 }
 
+#education-section {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
+
 /* Responsive design adjustments */
 @media screen and (max-width: 600px) {
   .profile-container {
